--- a/articles/getting-shit-done-with-software.haml
+++ b/articles/getting-shit-done-with-software.haml
@@ -19,7 +19,7 @@
   :markdown
     This setup is _perfect_. I can adapt the workspace to fit with _my needs_. Not how someone else envisaged it to work in their software design wet dream. It keeps out of my way and I can style anything to my liking.
     
-    * When I type a time, like _"Next week"_ or _"Tomorrow"_ its converted to a calendar date.
+    * When I type a time, like _"Next week"_ or _"Tomorrow"_ its automagically converted to a calendar date.
     * I can indent items or leave notes using `TAB` or `Return`
     * Other than folding _"Next"_ or _"Upcoming"_ up, I can simply view only the items that I'm focusing on.
     
