Pullquote tweaks for aesthetic appeal

--- a/articles/getting-shit-done-with-software.haml
+++ b/articles/getting-shit-done-with-software.haml
@@ -4,7 +4,7 @@
 .column.eight
   :markdown
     One of the many myths of GTD and todo software is that they all require feature X, Y and usually Z. Hell, throw all of them in.
-  %q.pullquote More features = Better software, right?
+  %blockquote.column.three More features makes for better software, right?
   :markdown  
     Like a few people I'm sure, I've chopped and changed my todo software as I've realised something wasn't working for me. I've used both web and mac applications, it just didn't work out.
     
