--- a/public/css/base.css
+++ b/public/css/base.css
@@ -25,7 +25,7 @@ section#content p { margin: 0 0 1em 0; }
 
 #content .note p { font-size: 0.8em; color: #999; line-height: 1.6em; font-style: italic; }
 #content .note p a { color: #666; }
-#content q.pullquote { font-size: 150%; font-style: italic; color: #999; margin: 1em 0; margin-left: 1.2em; display:block; }
+#content blockquote { font-size: 150%; font-style: italic; color: #999; margin: 1em 0; padding: 0.7em 0 0.7em 1.2em; border-top: double; border-bottom: double; margin: 0 0.5em 0 0; text-indent: 0; }
 
 .column ul.bullet { margin-left: -0.7em; margin-bottom: 1.5em; }
 .column li { margin-bottom: 1.5em; }
