Screw relying on twitter for an image

--- a/views/_about.haml
+++ b/views/_about.haml
@@ -1,6 +1,6 @@
 #about.vcard.column.four
   %h4 About the author
-  %img{:src => about[:profile_image_url]}
+  %img{:src => "http://s3.amazonaws.com/twitter_production/profile_images/280124623/Photo-69_normal.png"}
   %p
     %span.fn Ben Schwarz
     is web architect hailing from
