--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,7 +23,7 @@
       = yield
     %section#footer
       %section
-        = partial "about", :about => @twitter
+        = partial "about"
         = partial "event", :event => @event
         = partial "elsewhere"
         = partial "cc"
