--- a/views/layout.haml
+++ b/views/layout.haml
@@ -24,7 +24,7 @@
     %section#footer
       %section
         = partial "about"
-
+        = partial "event", :event => @event
         = partial "elsewhere"
         = partial "cc"
     %script{ :src => "http://www.google-analytics.com/urchin.js", :type => "text/javascript" }
