Added excerpts to all existing articles

--- a/articles/growing-up-with-a-new-site.haml
+++ b/articles/growing-up-with-a-new-site.haml
@@ -1,5 +1,6 @@
 -# title: Growing up with a new site
 -# published: 2009-07-31
+-# excerpt: Looking back, my representation on the web has always been pretty half assed.
 
 .column.eight
   :markdown
