--- a/articles/rubykaigi-a-western-perspective.haml
+++ b/articles/rubykaigi-a-western-perspective.haml
@@ -1,5 +1,6 @@
 -# title: RubyKaigi, a western perspective
 -# published: 2009-07-22
+-# excerpt: As the plane descended into Narita I felt a throbbing pain in my ear that felt like the side of my head was going to explode like an ACME bomb on a roadrunner cartoon.
 
 .column.eight
   :markdown
