--- a/articles/getting-shit-done-with-software.haml
+++ b/articles/getting-shit-done-with-software.haml
@@ -1,5 +1,6 @@
 -# title: Getting shit done, with software
 -# published: 2009-08-12
+-# excerpt: More features makes for better software, right?
 
 .column.eight
   :markdown
