Set the alternate url to a page that won't 404

--- a/views/feed.haml
+++ b/views/feed.haml
@@ -3,7 +3,7 @@
  
   %title germanforblack articles
   %link{:href => "http://feeds.feedburner.com/benschwarz", :rel => "self", :hreflang => "en", :type => "application/atom+xml"}/
-  %link{:href => "http://www.germanforblack.com/articles", :rel => "alternate", :hreflang => "en", :type => "text/html"}/
+  %link{:href => "http://www.germanforblack.com", :rel => "alternate", :hreflang => "en", :type => "text/html"}/
    
   %author
     %name Ben Schwarz
