--- a/views/feed.haml
+++ b/views/feed.haml
@@ -2,7 +2,7 @@
 %feed{:xmlns => "http://www.w3.org/2005/Atom"}
  
   %title germanforblack articles
-  %link{:href => "http://feeds.feedburner.com/benschwarz", :rel => "self", :hreflang => "en", :type => "application/atom+xml"}/
+  %link{:href => "http://www.germanforblack.com/articles.atom", :rel => "self", :hreflang => "en", :type => "application/atom+xml"}/
   %link{:href => "http://www.germanforblack.com", :rel => "alternate", :hreflang => "en", :type => "text/html"}/
    
   %author
