--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,7 +16,7 @@
     %link{:rel => "stylesheet", :href => "/css/base.css", :type => "text/css", :media => "screen"}
     %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}
     %link{:rel => "openid.delegate", :href => "http://benschwarz.myopenid.com/"}
-    %link{:rel => "alternate", :title => "German for black RSS", :href => "http://feeds.feedburner.com/schwarz", :type => "application/atom+xml"}    
+    %link{:rel => "alternate", :title => "German for black RSS", :href => "http://www.germanforblack.com/articles.atom", :type => "application/atom+xml"}    
     
   %body{:id => @page_id}
     #wrapper
