Replace all instances of :markdown for :smartypants

--- a/articles/getting-shit-done-with-software.haml
+++ b/articles/getting-shit-done-with-software.haml
@@ -3,10 +3,10 @@
 -# excerpt: More features makes for better software, right?
 
 .column.eight
-  :markdown
+  :smartypants
     One of the many myths of GTD and todo software is that they all require feature X, Y and usually Z. Hell, throw all of them in.
   %blockquote.column.three More features makes for better software, right?
-  :markdown  
+  :smartypants  
     Like a few people I'm sure, I've chopped and changed my todo software as I've realised something wasn't working for me. I've used both web and mac applications, it just didn't work out.
     
     More recently, I realised that I was a total tightass when I decided I didn't want to pay $50USD for [Cultured Code's](http://culturedcode.com/) ['Things'](http://culturedcode.com/things) app. I'd nabbed a copy for my iPhone, now I need to grab a desktop client licence. Lame. 
@@ -17,7 +17,7 @@
   
   %a{:href => "http://www.flickr.com/photos/benschwarz/3812310281/"}
     %img{:src => "http://farm3.static.flickr.com/2639/3812310281_02b127dbb8.jpg"}
-  :markdown
+  :smartypants
     This setup is _perfect_. I can adapt the workspace to fit with _my needs_. Not how someone else envisaged it to work in their software design wet dream. It keeps out of my way and I can style anything to my liking.
     
     * When I type a time, like _"Next week"_ or _"Tomorrow"_ its automagically converted to a calendar date.
@@ -29,5 +29,5 @@
     Back to work, slacker!
     
 .column.one.note
-  :markdown
+  :smartypants
     Perhaps Jeff Atwood was [right on the money](http://www.codinghorror.com/blog/archives/001293.html) when he recently discussed the idea that apps should be priced far lower, in order to promote the "why not?" buyer. 
