--- a/articles/growing-up-with-a-new-site.haml
+++ b/articles/growing-up-with-a-new-site.haml
@@ -3,7 +3,7 @@
 -# excerpt: Looking back, my representation on the web has always been pretty half assed.
 
 .column.eight
-  :markdown
+  :smartypants
     Looking back, my representation on the web has always been pretty half assed. In January, [Tim Lucas](http://toolmantim.com) pulled together a shiny new site and boosted his article quality dramatically. I thought "he's doing it right", I really wanted to get my action together.
     ## Shiny object syndrome
     That was January, here I sit the day before August staring into textmate typing the first article I've written in almost 2 years, I haven't even bothered to move those old posts. It wasn't worth it.
@@ -32,5 +32,5 @@
     A web site is never "done", I hope to evolve this site and keep it as fresh as I can for as long as I can (using technology, of course). Perhaps I'll end up writing better... God, I failed english in high school because I preferred to skip it to eat chinese and play pool with my friends. If it doesn't kill me it'll only make me stronger, right?
 
 .column.one.note
-  :markdown
+  :smartypants
     The source to the site is open and available [on Github](http://github.com/benschwarz/benschwarz-site).
