--- a/articles/rubykaigi-a-western-perspective.haml
+++ b/articles/rubykaigi-a-western-perspective.haml
@@ -3,7 +3,7 @@
 -# excerpt: As the plane descended into Narita I felt a throbbing pain in my ear that felt like the side of my head was going to explode like an ACME bomb on a roadrunner cartoon.
 
 .column.eight
-  :markdown
+  :smartypants
     I booked everything only 3 days before. Rushed around to shutdown the office for a couple of weeks and get everything in order. I woke up the day I was to depart feeling like I was getting a cold. I avoided packing until an hour and a half before I left for the airport.
 
     As the plane descended into Narita I felt a throbbing pain in my ear that felt like the side of my head was going to explode like an ACME bomb on a roadrunner cartoon.
