Smartypants for the about page too

--- a/views/about.haml
+++ b/views/about.haml
@@ -5,7 +5,7 @@
 
 %section#content.about
   .column.eight
-    :markdown
+    :smartypants
       ## Personal
       ![Me](/images/me.png)
       
@@ -23,11 +23,11 @@
   
   .column.three
     #special-projects
-      :markdown
+      :smartypants
         ## Special projects
         Apart from my personal work I also operate [AB+C](http://ab-c.com.au), alongside [Anthony Kolber](http://aestheticallyloyal.com). Together we are building [Ffolio](http://ffolio.net), a free portfolio service for artists and designers to gain beautiful, professional looking web representation.
     .colophon.note.two
-      :markdown
+      :smartypants
         Colophon: In part, you can read about [how this site came to be](/articles/growing-up-with-a-new-site) within my opening post.
     
     
