--- a/views/about.haml
+++ b/views/about.haml
@@ -29,5 +29,7 @@
     .colophon.note.two
       :smartypants
         Colophon: In part, you can read about [how this site came to be](/articles/growing-up-with-a-new-site) within my opening post.
-    
+    .note.two
+      :smartypants
+        Impressed with something I've done? At a usergroup, perhaps open source contributions? Maybe we partied until the early dawn? Give me a review [on WWR](http://www.workingwithrails.com/person/4644-ben-schwarz).
     
