More questions, more questions

--- a/views/about.haml
+++ b/views/about.haml
@@ -31,5 +31,5 @@
         Colophon: In part, you can read about [how this site came to be](/articles/growing-up-with-a-new-site) within my opening post.
     .note.two
       :smartypants
-        Impressed with something I've done? At a usergroup, perhaps open source contributions? Maybe we partied until the early dawn? Give me a review [on WWR](http://www.workingwithrails.com/person/4644-ben-schwarz).
+        Impressed with something I've done? At a usergroup? Perhaps open source contributions? Maybe we partied until the early dawn? Give me a review [on WWR](http://www.workingwithrails.com/person/4644-ben-schwarz).
     
