Updated my mugshot, Lomo style. Added some styles and changed the about page grid around a bit

--- a/views/about.haml
+++ b/views/about.haml
@@ -4,32 +4,25 @@
   %h1 About the author
 
 %section#content.about
+  %h2 Personal
   .column.eight
-    :smartypants
-      ## Personal
-      ![Me](/images/me.png)
-      
-      I was born and still live in Melbourne, Australia. However I have aspirations to travel the world and live subsidised entirely via a laptop.  
-      
-      Here in Melbourne I work for myself, the company name is completely uninteresting (Ben Schwarz Pty Ltd), however; I love what I do and constantly strive to improve my process and knowledge. 
-
-      Currently, I manage projects using something _like_ agile and most of development work is conducted using BDD and/or TDD, depending on the flavor of project.
-
-      My language of choice is Ruby, however my skills cross the chasm of various open source technologies and front end development.
-
-      Previously, I've worked in environments where the particular focus has been _"humane design"_, this is something that resonates very well with the minimal approach that I like to bring to my processes - _"Simple, beautiful, user results"_.
-
-      If you have a project in mind please feel free to drop me a line to discuss. If I can't help you chances are I'll know someone who can.
+    %img{:src => "/images/me.jpg"}
+    .column.eight
+      .column.four
+        :smartypants
+          I was born and still live in Melbourne, Australia. However I have aspirations to travel the world and live subsidised entirely via a laptop.  
   
+          Here in Melbourne I work for myself, I love what I do and constantly strive to improve my process and knowledge. 
+          Every facet of my professional practice emcompasses _"humane design"_, weather it be architechure, storyboarding or code. 
+          Currently, I manage projects using something _like_ agile and most of development work is conducted using BDD and/or TDD, depending on the flavor of project.      
+
+          My language of choice is Ruby, however my skills cross the chasm of various open source technologies and front end development.        
+          If you have a project in mind please feel free to drop me a line to discuss. If I can't help you chances are I'll know someone who can.
+      .column.colophon.note.two
+        :smartypants
+          Colophon: In part, you can read about [how this site came to be](/articles/growing-up-with-a-new-site) within my opening post.
   .column.three
     #special-projects
       :smartypants
         ## Special projects
-        Apart from my personal work I also operate [AB+C](http://ab-c.com.au), alongside [Anthony Kolber](http://aestheticallyloyal.com). Together we are building [Ffolio](http://ffolio.net), a free portfolio service for artists and designers to gain beautiful, professional looking web representation.
-    .colophon.note.two
-      :smartypants
-        Colophon: In part, you can read about [how this site came to be](/articles/growing-up-with-a-new-site) within my opening post.
-    .note.two
-      :smartypants
-        Impressed with something I've done? At a usergroup? Perhaps open source contributions? Maybe we partied until the early dawn? Give me a review [on WWR](http://www.workingwithrails.com/person/4644-ben-schwarz).
-    
+        Apart from my personal work I also operate [AB+C](http://ab-c.com.au), alongside [Anthony Kolber](http://aestheticallyloyal.com). Together we are building [Ffolio](http://ffolio.net), a free portfolio service for artists and designers to gain beautiful, professional looking web representation.  
