--- a/public/css/base.css
+++ b/public/css/base.css
@@ -45,7 +45,7 @@ section#content li,
 section#content a,
 section#content p { color: #333333; }
 
-section.about img { float: left; }
+section.about img + * { margin-top: 2em; }
 
 section#footer { line-height: 1.1em; background-color: black; overflow: hidden; margin-top: 40px; padding-bottom: 25px; }
 section#footer section { width: 920px; margin: 0 auto; padding: 20px 0px 0px 40px; }
