--- a/views/about.haml
+++ b/views/about.haml
@@ -13,7 +13,7 @@
           I was born and still live in Melbourne, Australia. However I have aspirations to travel the world and live subsidised entirely via a laptop.  
   
           Here in Melbourne I work for myself, I love what I do and constantly strive to improve my process and knowledge. 
-          Every facet of my professional practice emcompasses _"humane design"_, weather it be architechure, storyboarding or code. 
+          Every facet of my professional practice emcompasses _"humane design"_, whether it be architechure, storyboarding or code. 
           Currently, I manage projects using something _like_ agile and most of development work is conducted using BDD and/or TDD, depending on the flavor of project.      
 
           My language of choice is Ruby, however my skills cross the chasm of various open source technologies and front end development.        
