Added link to WWR and reordered links a little

--- a/views/_elsewhere.haml
+++ b/views/_elsewhere.haml
@@ -6,11 +6,13 @@
     %li
       %a{:href => "http://github.com/benschwarz"} Github
     %li
-      %a{:href => "http://flickr.com/photos/benschwarz"} Flickr
-    %li
       %a{:href => "http://slideshare.com/benschwarz"} Slideshare
     %li
+      %a{:href => "http://workingwithrails.com/person/4644-ben-schwarz"} WWR
+    %li
       %a{:href => "http://delicious.com/bschwarz"} Delicious
+    %li
+      %a{:href => "http://flickr.com/photos/benschwarz"} Flickr
     %li
       %a{:href => "http://upcoming.yahoo.com/user/908522/"} Upcoming
     %li
