render an empty element if slideshare is down

--- a/views/_presentations.haml
+++ b/views/_presentations.haml
@@ -7,4 +7,5 @@
           %a{:href => presentation[:URL]}
             %img{:src => presentation[:ThumbnailSmallURL]}
 - rescue
+  #presentations.column.two
   
