--- a/views/index.haml
+++ b/views/index.haml
@@ -17,4 +17,4 @@
   
   = partial "links", :links => @links
   = partial "projects", :projects => @projects
-  = partial "presentations", :presentations => @presentations
+  = partial "presentations"
