Corrected a little boo boo (thanks, ben_h)

--- a/articles/a-why-ruby-article-for-now.haml
+++ b/articles/a-why-ruby-article-for-now.haml
@@ -1,4 +1,4 @@
--# title: Why Ruby? 4th Quarter 09' edition
+-# title: Why Ruby? 4th Quarter '09 edition
 -# published: 2009-11-26
 -# excerpt: A summary that doesn't talk about Ruby being "beautiful" or "expressive"
 -# keywords: ruby, macruby, ironruby, rubinius, rbx, vm, virtual machine, implementations, language, llvm
