Added remote tracking code (taken from æ)

--- a/views/_cc.haml
+++ b/views/_cc.haml
@@ -2,4 +2,4 @@
   %h4 Creative commons license
   %p 
     All content herein by Ben Schwarz unless otherwise noted. License: Creative Commons, by
-    %a{:href => "http://creativecommons.org/licenses/by-nc-sa/3.0/", :rel => "license"} nc-sa
+    %a{:href => "http://creativecommons.org/licenses/by-nc-sa/3.0/", :rel => "external, license"} nc-sa
