--- a/views/_elsewhere.haml
+++ b/views/_elsewhere.haml
@@ -2,16 +2,16 @@
   %h4 Elsewhere
   %ul.bullet
     %li
-      %a{:href => "http://twitter.com/benschwarz"} Twitter
+      %a{:href => "http://twitter.com/benschwarz", :rel => "external"} Twitter
     %li
-      %a{:href => "http://github.com/benschwarz"} Github
+      %a{:href => "http://github.com/benschwarz", :rel => "external"} Github
     %li
-      %a{:href => "http://flickr.com/photos/benschwarz"} Flickr
+      %a{:href => "http://flickr.com/photos/benschwarz", :rel => "external"} Flickr
     %li
-      %a{:href => "http://slideshare.com/benschwarz"} Slideshare
+      %a{:href => "http://slideshare.com/benschwarz", :rel => "external"} Slideshare
     %li
-      %a{:href => "http://delicious.com/bschwarz"} Delicious
+      %a{:href => "http://delicious.com/bschwarz", :rel => "external"} Delicious
     %li
-      %a{:href => "http://upcoming.yahoo.com/user/908522/"} Upcoming
+      %a{:href => "http://upcoming.yahoo.com/user/908522/", :rel => "external"} Upcoming
     %li
-      %a{:href => "http://last.fm/user/benschwarz"} Last.fm
+      %a{:href => "http://last.fm/user/benschwarz", :rel => "external"} Last.fm
