--- a/views/layout.haml
+++ b/views/layout.haml
@@ -31,4 +31,5 @@
     %script{ :type => "text/javascript" }
       _uacct = "UA-139707-2";
       urchinTracker();
+    %script{:type => "text/javascript", :src => "/js/track-external.js"}
 
