Upped the external tracking to something that works Added some keywords

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     %meta{"http-equiv" => 'Content-Type', :content => 'text/html; charset=utf-8'}
     %meta{:name => "description", :content => "A Melbourne based ruby developer with an uncanny fetish for user experience and technology"}
-    %meta{:name => "keywords", :content => "ruby, developer, ui, ux, user experience, application development, testing, test driven, development, melbourne, australia, ben, ben schwarz, benschwarz, bschwarz"}
+    %meta{:name => "keywords", :content => "ruby, developer, ui, ux, user experience, application development, testing, test driven, development, melbourne, australia, ben, ben schwarz, benschwarz, bschwarz, smoke, passenger-stack, bonsai"}
     %meta{:name => "author", :content => "Ben Schwarz"}
     %meta{:name => "robots", :content => "index, follow"}
     %meta{:name => "verify-v1", :content => "BlTJbJUo6znmPTKrfDI07Fho8QvSw7Q/4NxpM0s4HwU="}   
