Added black text-shadow

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -51,7 +51,7 @@ section.about img + * { margin-top: 2em; }
 
 section#footer { line-height: 1.1em; background-color: black; overflow: hidden; margin-top: 40px; padding-bottom: 25px; }
 section#footer section { width: 920px; margin: 0 auto; padding: 20px 0px 0px 40px; }
-section#footer h4 { color: #FF3300; font-weight: normal; font-style: italic; text-transform: lowercase; font-size: 1.2em; margin-bottom: 25px; }
+section#footer h4 { color: #FF3300; text-shadow: black 1px 1px 1px; font-weight: normal; font-style: italic; text-transform: lowercase; font-size: 1.2em; margin-bottom: 25px; }
 section#footer p, 
 section#footer li { color: #CCC; font-size: 0.8em; }
 section#footer a { color: #FF3300; }
