Upgrade to use bundler for all dependencies. Added an article about autoload. Converted over to use lesscss for all styles.

--- a/articles/rubykaigi-a-western-perspective.haml
+++ b/articles/rubykaigi-a-western-perspective.haml
@@ -41,4 +41,4 @@
 
     #### Rubykaigi is almost more than 60% japanese content
     ![Ruby in Japanese](http://farm4.static.flickr.com/3440/3742724460_ed3329978c.jpg "Ruby")
-    Leonard Chin was a superstar, he had live translations on a second monitor in all of the japanese sessions that I attended. Anyway, I skipped more than 60% of the talks at Railsconf this year (currency of talks at these big conferences is a bitch). Most times conferences are more about going to meet and hang out with other like minded people. RubyKaigi was awesome and it'll be pretty hard to not attend next year. See you there?
+    [Leonard Chin](http://twitter.com/lchin) was a superstar, he had live translations on a second monitor in all of the japanese sessions that I attended. Anyway, I skipped more than 60% of the talks at Railsconf this year (currency of talks at these big conferences is a bitch). Most times conferences are more about going to meet and hang out with other like minded people. RubyKaigi was awesome and it'll be pretty hard to not attend next year. See you there?
