--- a/views/_about.haml
+++ b/views/_about.haml
@@ -1,4 +1,4 @@
-#about.vcard.column.four
+#about.vcard
   %h4 About the author
   %img{:src => "http://s3.amazonaws.com/twitter_production/profile_images/280124623/Photo-69_normal.png"}
   %p
