--- a/views/_event.haml
+++ b/views/_event.haml
@@ -1,4 +1,4 @@
-#events.vevent.column.three
+#events.vevent
   %h4 Upcoming events
   %p
     %a{:href => event[:ticket_url], :class => "url summary", :rel => "external"} 
