--- a/views/_presentations.haml
+++ b/views/_presentations.haml
@@ -1,6 +1,6 @@
 - begin
   - presentations = Smoke[:slideshare].output
-  #presentations.column.two
+  #presentations
     %h2 Presentations
     %ul
       - for presentation in presentations
