--- a/views/about.haml
+++ b/views/about.haml
@@ -4,26 +4,24 @@
   %h1 About the author
 
 %section#content.about
-  %h2 Personal
-  .column.eight
+  #personal
+    %h2 Personal
     %img{:src => "/images/me.jpg"}
-    .column.eight
-      .column.four
-        :smartypants
-          I was born and still live in Melbourne, Australia. However I have aspirations to travel the world and live subsidised entirely via a laptop.  
-  
-          Here in Melbourne I work for myself, I love what I do and constantly strive to improve my process and knowledge. 
-          Every facet of my professional practice emcompasses _"humane design"_, whether it be architechure, storyboarding or code. 
-          Currently, I manage projects using something _like_ agile and most of development work is conducted using BDD and/or TDD, depending on the flavor of project.      
-
-          My language of choice is Ruby, however my skills cross the chasm of various open source technologies and front end development.        
-          
-          If you have a project in mind please feel free to drop me a line to discuss. If I can't help you chances are I'll know someone who can.
-      .column.colophon.note.two
-        :smartypants
-          Colophon: In part, you can read about [how this site came to be](/articles/growing-up-with-a-new-site) within my opening post.
-  .column.three
-    #special-projects
+    .bio
       :smartypants
-        ## Special projects
-        Apart from my personal work I also operate [AB+C](http://ab-c.com.au), alongside [Anthony Kolber](http://aestheticallyloyal.com). Together we are building [Ffolio](http://ffolio.net), a free portfolio service for artists and designers to gain beautiful, professional looking web representation.  
+        I was born and still live in Melbourne, Australia. However I have aspirations to travel the world and live subsidised entirely via a laptop.  
+
+        Here in Melbourne I work for myself, I love what I do and constantly strive to improve my process and knowledge. 
+        Every facet of my professional practice emcompasses _"humane design"_, whether it be architechure, storyboarding or code. 
+        Currently, I manage projects using something _like_ agile and most of development work is conducted using BDD and/or TDD, depending on the flavor of project.      
+
+        My language of choice is Ruby, however my skills cross the chasm of various open source technologies and front end development.        
+      
+        If you have a project in mind please feel free to drop me a line to discuss. If I can't help you chances are I'll know someone who can.
+    .colophon.note
+      :smartypants
+        Colophon: In part, you can read about [how this site came to be](/articles/growing-up-with-a-new-site) within my opening post.
+  #special-projects
+    :smartypants
+      ## Special projects
+      Apart from my personal work I also operate [AB+C](http://ab-c.com.au), alongside [Anthony Kolber](http://aestheticallyloyal.com). Together we build beautiful, professional looking web applications. Got something you want to get off the ground? Talk to us.
