--- a/views/index.haml
+++ b/views/index.haml
@@ -4,7 +4,7 @@
     is a web architect hailing from Melbourne, Australia who has a strong focus on user experience and scalable content delivery. 
     
 %section#content
-  %section#recently.column.four
+  %section#recently
     %h2 Recently
     %ul.articles
       = partial "articles", :articles => @articles
