Made some formatting changes

--- a/articles/ruby-autoload.haml
+++ b/articles/ruby-autoload.haml
@@ -16,7 +16,12 @@
     Fantastic right? Well, sadly. No.
     
     Autoload will only load from your `$LOAD_PATH`, so I decided to [roll up my sleeves](http://gist.github.com/324367).
+    
     Now, I'm sure that overriding `Object` is pretty much a no-no in nearly every circumstance, but `Kernel` as well? [Ludacris](http://en.wikipedia.org/wiki/Ludacris)!
     
     ## In closing
     No matter how [bat-shit-crazy](http://www.urbandictionary.com/define.php?term=bat-shit+crazy) you might think this hack is, its actually very awesome. Thats all I have to say.
+    
+.column.one
+  :smartypants
+    View: [The gist](http://gist.github.com/324367).
