--- a/articles/ruby-autoload.haml
+++ b/articles/ruby-autoload.haml
@@ -22,6 +22,6 @@
     ## In closing
     No matter how [bat-shit-crazy](http://www.urbandictionary.com/define.php?term=bat-shit+crazy) you might think this hack is, its actually very awesome. Thats all I have to say.
     
-.column.one
+.column.one.note
   :smartypants
     View: [The gist](http://gist.github.com/324367).
