--- a/articles/ruby-autoload.haml
+++ b/articles/ruby-autoload.haml
@@ -3,7 +3,7 @@
 -# excerpt: How and why I overrode Kernel.autoload
 -# keywords: ruby, rubygems, autoload, code, gist, kernel, monkey-patch
 
-.column.six
+.column.seven
   :smartypants
     Recently, I wrote [transcoder](http://github.com/benschwarz/transcoder) as a means of parsing common web formats (`json`, `xml`, `rss/atom` anyone?) without being too concerned about what a web service or API was returning to you. 
     
