--- a/articles/ruby-autoload.haml
+++ b/articles/ruby-autoload.haml
@@ -1,4 +1,4 @@
--# title: Ruby autoloading
+-# title: Hacking ruby's autoload
 -# published: 2010-02-08
 -# excerpt: How and why I overrode Kernel.autoload
 -# keywords: ruby, rubygems, autoload, code, gist, kernel, monkey-patch
@@ -20,7 +20,7 @@
     Now, I'm sure that overriding `Object` is pretty much a no-no in nearly every circumstance, but `Kernel` as well? [Ludacris](http://en.wikipedia.org/wiki/Ludacris)!
     
     ## In closing
-    No matter how [bat-shit-crazy](http://www.urbandictionary.com/define.php?term=bat-shit+crazy) you might think this hack is, its actually very awesome. Thats all I have to say.
+    No matter how [bat-shit-crazy](http://images.google.com.au/images?sourceid=chrome&q=tom%20cruise%20on%20couch&um=1&ie=UTF-8&sa=N&hl=en&tab=wi) you might think this hack is, its actually very awesome. Thats all I have to say.
     
 .column.one.note
   :smartypants
