--- a/articles/ruby-autoload.haml
+++ b/articles/ruby-autoload.haml
@@ -23,7 +23,10 @@
     No matter how [bat-shit-crazy](http://images.google.com.au/images?sourceid=chrome&q=tom%20cruise%20on%20couch&um=1&ie=UTF-8&sa=N&hl=en&tab=wi) you might think this hack is, its actually very awesome. 
     
     ## Conclusion
-    I wrote the full-well knowing that this was a pretty dirty solution - certainly not one that you would want in library code. Where do you turn? To [Evan Pheonix](http://blog.fallingsnow.net/), thats who. 
+    I wrote the full-well knowing that this was a pretty dirty solution - certainly not one that you would want in library code. 
+    
+    Where do you turn? To [Evan Pheonix](http://blog.fallingsnow.net/), thats who. 
+    
     I explained the design problem that I was faced with to Evan. One of the most magical things about the Rubinius project is that Evan and [Brian](http://github.com/brixen) are implmenting Ruby IN RUBY. They've probably thought about or wrestled with similar design issues or wants before. 
     
     Evan explained a design solution, and [I implemented it](http://github.com/benschwarz/transcoder/commit/eb4463380925dde8436f766edc4d4b98066ffffa).
