--- a/articles/ruby-autoload.haml
+++ b/articles/ruby-autoload.haml
@@ -23,7 +23,7 @@
     No matter how [bat-shit-crazy](http://images.google.com.au/images?sourceid=chrome&q=tom%20cruise%20on%20couch&um=1&ie=UTF-8&sa=N&hl=en&tab=wi) you might think this hack is, its actually very awesome. 
     
     ## Conclusion
-    I wrote the full-well knowing that this was a pretty dirty solution - certainly not one that you would want in library code. 
+    I wrote this post full-well knowing that this was a pretty dirty solution - certainly not one that you would want in library code. 
     
     Where do you turn? To [Evan Pheonix](http://blog.fallingsnow.net/), thats who. 
     
