--- a/articles/ruby-autoload.haml
+++ b/articles/ruby-autoload.haml
@@ -27,7 +27,9 @@
     
     Where do you turn? To [Evan Pheonix](http://blog.fallingsnow.net/), thats who. 
     
-    I explained the design problem that I was faced with to Evan. One of the most magical things about the Rubinius project is that Evan and [Brian](http://github.com/brixen) are implmenting Ruby IN RUBY. They've probably thought about or wrestled with similar design issues or wants before. 
+    I explained the design problem that I was faced with to Evan. One of the most magical things about the [Rubinius](http://rubini.us/) project is that Evan and [Brian](http://github.com/brixen) are implmenting Ruby IN RUBY. 
+    
+    They've probably thought about or wrestled with similar design issues or requirements while implementing the core ruby language. 
     
     Evan explained a design solution, and [I implemented it](http://github.com/benschwarz/transcoder/commit/eb4463380925dde8436f766edc4d4b98066ffffa).
     
