Typo on Evans name (Sorry!)

--- a/articles/ruby-autoload.haml
+++ b/articles/ruby-autoload.haml
@@ -25,7 +25,7 @@
     ## Conclusion
     I wrote this post full-well knowing that this was a pretty dirty solution - certainly not one that you would want in library code. 
     
-    Where do you turn? To [Evan Pheonix](http://blog.fallingsnow.net/), thats who. 
+    Where do you turn? To [Evan Phoenix](http://blog.fallingsnow.net/), thats who. 
     
     I explained the design problem that I was faced with to Evan. One of the most magical things about the [Rubinius](http://rubini.us/) project is that Evan and [Brian](http://github.com/brixen) are implmenting Ruby IN RUBY. 
     
