--- a/articles/ruby-autoload.haml
+++ b/articles/ruby-autoload.haml
@@ -32,7 +32,7 @@
     They've probably thought about or wrestled with similar design issues or requirements while implementing the core ruby language. 
     
     Evan explained a design solution, and [I implemented it](http://github.com/benschwarz/transcoder/commit/eb4463380925dde8436f766edc4d4b98066ffffa).
-    
+    Hopefully I didn't trample too much over this. A big thanks is due to Evan. 
     
 .column.one.note
   :smartypants
