Styles for code blocks and set the meta charset more elegantly.

--- a/public/css/base.less
+++ b/public/css/base.less
@@ -100,8 +100,10 @@ article section#content img { margin-bottom: 1.5em; }
 
 article section ul { margin-top: 1em; margin-bottom: 1em; }
 article section .column ul li { margin-bottom: 0.5em; list-style-type: decimal; }
-
-code { font-size: 120%; background-color: #eee; text-shadow: 1px 1px 1px #eee; padding: 0.1em 0.5em; .border-radius; }
+ 
+pre { padding: 0.1em 0.5em; margin: 1em 0em; }
+code { font-size: 120%; padding: 0.1em 0.5em; }
+pre, code { background-color: #eee; text-shadow: 1px 1px 1px #eee; .border-radius; }
 
 #wrapper #home { position: absolute; top: 30px; margin-left: 40px; font-size: 0.7em; color: #999; text-decoration: none; font-style: italic; }
 article section#content h2 { margin: 2em 0 0 0; display: block; }
