--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,7 @@
 !!!
 %html{:lang => "en"}
   %head
-    %meta{"http-equiv" => 'Content-Type', :content => 'text/html; charset=utf-8'}
+    %meta{:charset => "utf-8"}
     %meta{:name => "description", :content => "A Melbourne based ruby developer with an uncanny fetish for user experience and technology"}
     %meta{:name => "keywords", :content => "ruby, developer, ui, ux, user experience, application development, testing, test driven, development, melbourne, australia, ben, ben schwarz, benschwarz, bschwarz, smoke, passenger-stack, bonsai"}
     %meta{:name => "author", :content => "Ben Schwarz"}
